# dockerBoi

./: .gitignore  todo.md
backend/: Cargo.toml
backend/src/: api.rs  main.rs  registry.rs
frontend/: .dockerignore  Cargo.toml  Dockerfile  Trunk.toml  index.html
frontend/.cargo/: config.toml
frontend/src/: app.rs  main.rs  registry.rs
frontend/src/page/: help.md  help.rs  mod.rs  repo.rs  repo_list.rs
frontend/static/styles/: common.scss
