[package]
name = "dockerboi"
version = "0.1.0"
authors = ["ide-1 <ida.josephine.dahl@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0-rc.1", features = ["json"] }
reqwest = { version = "0.11.4", default-features=false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }