[package]
name = "frontend"
version = "0.1.2"
edition = "2018"
authors = [
    "Joakim Hulthe <joakim@hulthe.net>",
    "Ida Dahl",
]

[dependencies]
seed = "0.8.0"
web-sys = { version = "0.3", features = ["Clipboard"] }
serde = { version = "1", features = ["derive"] }
markdown = "0.3.0"
semver = "1.0.3"
